[gd_scene load_steps=2 format=3 uid="uid://dqekoayu7gxoe"]

[ext_resource type="Script" uid="uid://c08hx7vw5s2bi" path="res://menu.gd" id="1_lti8b"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lti8b")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 70.0
offset_bottom = 171.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Team" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Team"

[node name="Practice" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Practice"

[node name="Race" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Race"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Team" to="." method="_on_team_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Practice" to="." method="_on_practice_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Race" to="." method="_on_race_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
